--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bson==0.4.1
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.7.3
@@ -6,6 +7,7 @@ nltk==3.0.4
 numpy==1.9.2
 praw==3.1.0
 pymongo==3.0.3
+pytz==2015.4
 requests==2.7.0
 scikit-learn==0.16.1
 six==1.9.0
