--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+community==1.0.0b1
+decorator==4.0.4
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+mongoengine==0.10.0
+networkx==1.10
 nltk==3.0.4
 numpy==1.9.2
 praw==3.1.0
@@ -9,6 +13,7 @@ pymongo==3.0.3
 pytz==2015.4
 requests==2.7.0
 scikit-learn==0.16.1
+scipy==0.16.0
 six==1.9.0
 sklearn==0.0
 stop-words==2015.2.23.1
