--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-resource": "^1.5.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "d3": "^3.5.16"
   }
 }
