--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.0",
     "angular-resource": "^1.5.0",
     "angular-ui-router": "^0.2.18",
-    "d3": "^3.5.16"
+    "d3": "^3.5.16",
+    "moment": "^2.12.0"
   }
 }
